# Kata-CVM-Cofunc-TDX

./: .gitattributes  .gitignore  MANIFEST.md  QUICKSTART.md  README.md  SHA256SUMS  setup_cofunc_tdx_e2e.sh
configs/: configuration-qemu-tdx-artifact-qemu10-debug.toml  configuration-qemu-tdx-artifact-qemu7-blockroot-normalmem.toml  configuration-qemu-tdx-artifact-qemu7-debug-kata-ovmf-normalmem.toml  configuration-qemu-tdx-artifact-qemu7-debug-kata-ovmf.toml  configuration-qemu-tdx-artifact-qemu7-debug-kata24-agent-noavx-agentcid-normalmem.toml  configuration-qemu-tdx-artifact-qemu7-debug-kata24-agent-noavx-normalmem.toml  configuration-qemu-tdx-artifact-qemu7-debug-kata24-agent-noavx512-normalmem.toml  configuration-qemu-tdx-artifact-qemu7-debug-kata24-agent-normalmem.toml  configuration-qemu-tdx-artifact-qemu7-debug-kata24-agent-ubuntuimage-noavx-agentcid-normalmem.toml  configuration-qemu-tdx-artifact-qemu7-debug-kata24-agent-ubuntuimage-noavx-normalmem.toml  configuration-qemu-tdx-artifact-qemu7-debug-kata24-initrd-normalmem.toml  configuration-qemu-tdx-artifact-qemu7-debug-tdvf2022.toml  configuration-qemu-tdx-artifact-qemu7-debug.toml  configuration-qemu-tdx-debug-virtiofs.toml  host-kernel-6.19.0-rc6-cofunc-tdx.config
cvm_os/: .config  chbuild  config.cmake  download_musl.sh
cvm_os/kernel/arch/x86_64/boot/intel_tdx/: CMakeLists.txt
cvm_os/kernel/arch/x86_64/boot/intel_tdx/init/: header.S
docs/: cofunc_tdx_paper_targets.md  mentor_graphing_context.md  tdx_fig11_no2m_handoff_20260715.md  tdx_reproduction_handoff.md
reports/: cofunc_prefault_experiment_20260720.md  kata_handler_translation_investigation_20260719.md  kata_native_handler_similarity_investigation_20260720.md  native_kata_fault_experiment_plan_20260720.md  native_kata_fault_experiment_results_20260720.md
scripts/: analyze_cofunc_ept_trace.py  analyze_cofunc_prefault_fault_savings.py  analyze_fault_comparison.py  apply_current_early_probe_build.sh  assemble_kata_tdx_fig11_final.py  boot_oldqemu_chcore_diag.sh  build_5_19_clear_oldabi_private_fault_release_flags.sh  build_5_19_clear_private_mem_flags.sh  build_5_19_clear_tdx_unpin_flags.sh  build_5_19_disable_oldabi_private_2m.sh  build_5_19_log_all_face_gfn_tdp_levels.sh  build_5_19_log_face_gfn_hugepage_decision.sh  build_5_19_log_face_gfn_private_tdp_levels.sh  build_5_19_log_high_gfn_private_tdp_levels.sh  build_5_19_log_private_fault_levels.sh  build_5_19_private_mem_invalidate_fix.sh  build_5_19_skip_kvm_accessed_mark.sh  build_5_19_skip_kvm_ad_marks.sh  build_5_19_suppress_private_tdp_dirty_track.sh  build_5_19_suppress_private_tdp_spte_ad_after_unpin.sh  build_paper_native_stage_model.py  cleanup_current_tdx_diagnostics.sh  cleanup_kata_tdx_completed_blockfile_images.sh  cleanup_kata_tdx_measured_workload_image.sh  (+95 more)
(+115 files in other folders)
